[gd_scene load_steps=61 format=3 uid="uid://c0vnqt6uyxaoa"]

[ext_resource type="Script" uid="uid://cyl4xkbxxw8c3" path="res://player/Player.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://tykcwr43cbsh" path="res://player/ControllableCamera.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://jmt4y8nkctho" path="res://assets/models/CombatPack.glb" id="2_jydkg"]
[ext_resource type="PackedScene" uid="uid://e2bccij4j7ud" path="res://player/Controls.tscn" id="3"]
[ext_resource type="Script" uid="uid://dutrfmwgmphp3" path="res://scripts/StateMachine.gd" id="4"]
[ext_resource type="Script" uid="uid://bkowefggrcw7w" path="res://player/states/Stopped.gd" id="5"]
[ext_resource type="Script" uid="uid://14kjrfjgk8qf" path="res://player/states/Running.gd" id="6"]
[ext_resource type="Script" uid="uid://cue5nls2a2a1x" path="res://player/states/Jumping.gd" id="7"]
[ext_resource type="Script" uid="uid://dycb8rnyfymaf" path="res://player/states/Dashing.gd" id="8"]
[ext_resource type="Script" uid="uid://dcn1wuq6lywyx" path="res://player/states/OnGround.gd" id="9"]
[ext_resource type="Script" uid="uid://tmvyjmcavn3j" path="res://player/states/InAir.gd" id="10"]
[ext_resource type="Script" uid="uid://eest6dwdgje5" path="res://player/states/Falling.gd" id="11"]
[ext_resource type="Script" uid="uid://cu2etehxmh5jx" path="res://player/states/Crouching.gd" id="12"]
[ext_resource type="Script" uid="uid://70ods2aw2u72" path="res://player/states/Swimming.gd" id="14"]
[ext_resource type="Script" uid="uid://2aj5448ct3kn" path="res://player/states/OnSurface.gd" id="15"]
[ext_resource type="Script" uid="uid://ysxh24nlem0p" path="res://player/states/Underwater.gd" id="16"]
[ext_resource type="Script" uid="uid://cm1gf0jk8nefp" path="res://player/states/Diving.gd" id="17"]
[ext_resource type="Script" uid="uid://cmccjep3jh7i3" path="res://player/states/Surging.gd" id="18"]
[ext_resource type="Script" uid="uid://dx4klem31ebb8" path="res://player/HACKS.gd" id="19_ofhxi"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_jlm01"]
properties/0/path = NodePath("Skin/AnimationTree:parameters/Crouching/blend_position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("Skin/AnimationTree:parameters/Jump/active")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("Skin/AnimationTree:parameters/Jump/request")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("Skin/AnimationTree:parameters/Surging/blend_position")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("Skin/AnimationTree:parameters/RootState/current_state")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath(".:position")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath(".:rotation")
properties/6/spawn = true
properties/6/replication_mode = 2

[sub_resource type="SphereShape3D" id="21"]

[sub_resource type="CylinderShape3D" id="22"]
height = 0.173798
radius = 0.419353

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_42fik"]
animation = &"unarmed-jump-up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8rv0o"]
animation = &"unarmed-jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_olx42"]
animation = &"unarmed-jump-down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_chc45"]
animation = &"unarmed-dash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i62dv"]
animation = &"unarmed-crouch-idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_erpsk"]
animation = &"unarmed-crouch-run"

[sub_resource type="AnimationNodeBlendSpace1D" id="30"]
blend_point_0/node = SubResource("AnimationNodeAnimation_i62dv")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_erpsk")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_xnsw3"]
fadein_time = 0.1
fadeout_time = 0.1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r7aer"]
animation = &"unarmed-jump-down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xv5f5"]
animation = &"unarmed-jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rout0"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_broob"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_njbj0"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_d0nsn"]
states/unarmed-jump/node = SubResource("AnimationNodeAnimation_xv5f5")
states/unarmed-jump/position = Vector2(532, -4)
states/unarmed-jump-down/node = SubResource("AnimationNodeAnimation_r7aer")
states/unarmed-jump-down/position = Vector2(705, 101)
transitions = ["unarmed-jump", "unarmed-jump-down", SubResource("AnimationNodeStateMachineTransition_rout0"), "unarmed-jump-down", "End", SubResource("AnimationNodeStateMachineTransition_broob"), "Start", "unarmed-jump", SubResource("AnimationNodeStateMachineTransition_njbj0")]
graph_offset = Vector2(-77, -129)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8vtj3"]
animation = &"unarmed-idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_scca3"]
animation = &"unarmed-run"

[sub_resource type="AnimationNodeBlendSpace1D" id="34"]
blend_point_0/node = SubResource("AnimationNodeAnimation_8vtj3")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_scca3")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeTransition" id="35"]
xfade_time = 0.2
input_0/name = "on-ground"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "in-air"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "crouching"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true
input_3/name = "swimming"
input_3/auto_advance = false
input_3/break_loop_at_end = false
input_3/reset = true
input_4/name = "surging"
input_4/auto_advance = false
input_4/break_loop_at_end = false
input_4/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_46fj0"]
animation = &"unarmed-surge-charge"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j0pml"]
animation = &"unarmed-surge-release"

[sub_resource type="AnimationNodeBlendSpace1D" id="47"]
blend_point_0/node = SubResource("AnimationNodeAnimation_46fj0")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_j0pml")
blend_point_1/pos = 0.3

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nea15"]
animation = &"unarmed-swim-idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1kxyj"]
animation = &"unarmed-swim"

[sub_resource type="AnimationNodeBlendSpace1D" id="44"]
blend_point_0/node = SubResource("AnimationNodeAnimation_nea15")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_1kxyj")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeBlendTree" id="36"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_chc45")
nodes/Animation/position = Vector2(-60, 500)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_42fik")
"nodes/Animation 2/position" = Vector2(-1060, 140)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_8rv0o")
"nodes/Animation 3/position" = Vector2(-760, 220)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_olx42")
"nodes/Animation 4/position" = Vector2(-860, -80)
nodes/Crouching/node = SubResource("30")
nodes/Crouching/position = Vector2(-360, 260)
nodes/Jump/node = SubResource("AnimationNodeOneShot_xnsw3")
nodes/Jump/position = Vector2(-560, 80)
nodes/Jumping/node = SubResource("AnimationNodeStateMachine_d0nsn")
nodes/Jumping/position = Vector2(-1040, 40)
nodes/OnGround/node = SubResource("34")
nodes/OnGround/position = Vector2(-360, -20)
nodes/RootState/node = SubResource("35")
nodes/RootState/position = Vector2(-20, 140)
nodes/Surging/node = SubResource("47")
nodes/Surging/position = Vector2(-360, 540)
nodes/Swimming/node = SubResource("44")
nodes/Swimming/position = Vector2(-360, 400)
nodes/output/position = Vector2(400, 160)
node_connections = [&"Jump", 0, &"Animation 3", &"RootState", 0, &"OnGround", &"RootState", 1, &"Jump", &"RootState", 2, &"Crouching", &"RootState", 3, &"Swimming", &"RootState", 4, &"Surging", &"output", 0, &"RootState"]

[sub_resource type="StandardMaterial3D" id="16"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id="19"]
offsets = PackedFloat32Array(0.038, 0.483, 0.908)
colors = PackedColorArray(1, 0.654902, 0, 1, 1, 0.945098, 0.152941, 1, 1, 0.988235, 0.827451, 0)

[sub_resource type="GradientTexture2D" id="20"]
gradient = SubResource("19")

[sub_resource type="ParticleProcessMaterial" id="17"]
emission_shape = 3
emission_box_extents = Vector3(0.281, 0.524, 0)
direction = Vector3(0, 0, 1)
spread = 0.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("20")

[sub_resource type="BoxMesh" id="18"]
size = Vector3(0.04, 0.04, 2)

[sub_resource type="Gradient" id="23"]
offsets = PackedFloat32Array(0, 0.365079, 0.555556, 0.767196)
colors = PackedColorArray(0, 0.294118, 1, 1, 0.0235294, 0.505882, 0.992157, 1, 0.498039, 1, 0.941176, 1, 0.498039, 1, 0.941176, 0)

[sub_resource type="GradientTexture2D" id="24"]
gradient = SubResource("23")

[sub_resource type="Curve" id="25"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.34434, 1), 0.0, 0.0, 0, 0, Vector2(0.834906, 0), -4.81818, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="26"]
curve = SubResource("25")

[sub_resource type="ParticleProcessMaterial" id="27"]
direction = Vector3(0, 0, 1)
spread = 15.0
flatness = 0.38
initial_velocity_min = 1.0
initial_velocity_max = 3.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("26")
color = Color(1, 1, 1, 0.537255)
color_ramp = SubResource("24")

[sub_resource type="StandardMaterial3D" id="28"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="29"]
material = SubResource("28")
radius = 0.1
height = 0.2

[sub_resource type="CapsuleShape3D" id="37"]
radius = 0.3
height = 1.8

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_jlm01")

[node name="DeepWaterDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeepWaterDetector"]
shape = SubResource("21")

[node name="WaterSurfaceDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15803, 0)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="WaterSurfaceDetector"]
shape = SubResource("22")

[node name="Skin" type="Node3D" parent="."]

[node name="CombatPack" parent="Skin" instance=ExtResource("2_jydkg")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="GeneralSkeleton" parent="Skin/CombatPack/Armature" index="0"]
bones/0/position = Vector3(-0.000249626, 0.989769, 0.000271974)
bones/0/rotation = Quaternion(-0.0335268, -0.047148, -0.0269918, 0.99796)
bones/1/rotation = Quaternion(0.0338838, 0.0144484, 0.0241955, 0.999028)
bones/2/rotation = Quaternion(0.0102231, 0.00311512, 0.0136519, 0.99985)
bones/3/rotation = Quaternion(0.0100088, 0.00332407, 0.0136824, 0.999851)
bones/4/rotation = Quaternion(0.0502357, -0.00175183, 0.00484766, 0.998724)
bones/5/rotation = Quaternion(-0.0739114, 0.00946329, -0.000173455, 0.99722)
bones/7/rotation = Quaternion(0.455336, 0.50181, 0.63301, -0.374373)
bones/8/rotation = Quaternion(0.125952, 0.802398, -0.569818, -0.124906)
bones/9/rotation = Quaternion(0.00958119, -0.707041, 0.009581, 0.707043)
bones/10/rotation = Quaternion(0.0538759, 0.471903, -0.0110429, 0.879934)
bones/11/rotation = Quaternion(-0.0420419, -0.0049867, -0.019078, 0.998921)
bones/12/rotation = Quaternion(-0.152843, 0.812142, -0.0148236, 0.56289)
bones/13/rotation = Quaternion(0.0400036, -0.0528787, -0.128589, 0.989479)
bones/14/rotation = Quaternion(1.49012e-08, -7.45058e-08, -5.96046e-08, 1)
bones/14/scale = Vector3(1.00002, 1, 0.999985)
bones/15/position = Vector3(-0.0282204, 0.122666, 0.00230741)
bones/15/rotation = Quaternion(0.0662167, 0.000734523, 0.00843099, 0.997769)
bones/16/rotation = Quaternion(0.150998, -1.92225e-06, -0.0154739, 0.988413)
bones/17/rotation = Quaternion(0.0700819, -9.98378e-07, -0.00718167, 0.997515)
bones/18/rotation = Quaternion(2.98023e-08, -2.98023e-08, 2.98023e-08, 1)
bones/19/position = Vector3(-1.15254e-07, 0.127755, -1.1338e-05)
bones/19/rotation = Quaternion(0.136531, -0.00383803, -0.022952, 0.990363)
bones/20/rotation = Quaternion(0.151255, -1.49012e-06, -0.0155002, 0.988373)
bones/21/rotation = Quaternion(0.159933, -1.56462e-06, -0.0163893, 0.986992)
bones/23/position = Vector3(0.0221664, 0.12147, -0.000110647)
bones/23/rotation = Quaternion(0.183251, -0.00465432, -0.0314548, 0.982552)
bones/24/rotation = Quaternion(0.181388, -3.03984e-06, -0.0185881, 0.983236)
bones/25/rotation = Quaternion(0.155213, -2.6077e-06, -0.0159057, 0.987753)
bones/26/rotation = Quaternion(1.49012e-08, -1.49012e-08, 0, 1)
bones/27/position = Vector3(0.0472584, 0.109082, 0.0022517)
bones/27/rotation = Quaternion(0.233868, -0.00344396, -0.0490085, 0.971026)
bones/28/rotation = Quaternion(0.151258, -7.03633e-05, -0.0155004, 0.988373)
bones/29/rotation = Quaternion(0.143498, -4.76837e-07, -0.0147052, 0.989541)
bones/30/rotation = Quaternion(2.98023e-08, 7.45058e-08, 1.49012e-08, 1)
bones/31/rotation = Quaternion(0.473688, -0.481176, -0.636689, -0.372446)
bones/32/rotation = Quaternion(-0.149429, 0.827497, -0.498262, 0.211316)
bones/33/rotation = Quaternion(0.0410209, 0.70592, -0.041021, 0.705912)
bones/34/rotation = Quaternion(0.0417808, -0.570952, 0.034025, 0.819213)
bones/35/position = Vector3(0.0300298, 0.0378861, 0.0216749)
bones/35/rotation = Quaternion(-0.0367837, 0.0144658, 0.00205794, 0.999216)
bones/36/rotation = Quaternion(-0.121719, -0.819587, 0.0371544, 0.558642)
bones/37/rotation = Quaternion(0.0455579, 0.046076, 0.161691, 0.984712)
bones/38/rotation = Quaternion(-1.49012e-08, 7.45058e-08, 2.98023e-08, 1)
bones/38/scale = Vector3(1.00002, 1, 0.999985)
bones/39/position = Vector3(0.0282205, 0.122666, 0.00232897)
bones/39/rotation = Quaternion(0.059513, -0.000990927, -0.0109759, 0.998167)
bones/40/rotation = Quaternion(0.151288, -1.2964e-06, 0.0123243, 0.988413)
bones/41/rotation = Quaternion(0.0702164, -6.55651e-07, 0.00571996, 0.997515)
bones/42/rotation = Quaternion(1.49012e-08, 2.98023e-08, 5.96046e-08, 1)
bones/43/position = Vector3(2.54152e-07, 0.127755, 1.11544e-05)
bones/43/rotation = Quaternion(0.130515, 0.00368799, 0.0189225, 0.991259)
bones/44/rotation = Quaternion(0.151545, -1.04308e-06, 0.0123452, 0.988373)
bones/45/rotation = Quaternion(0.16024, -1.2964e-06, 0.0130536, 0.986992)
bones/47/position = Vector3(-0.0221662, 0.12147, -8.94189e-05)
bones/47/rotation = Quaternion(0.177452, 0.00449757, 0.0264594, 0.983764)
bones/48/rotation = Quaternion(0.181736, -7.45058e-08, 0.0148046, 0.983236)
bones/49/rotation = Quaternion(0.155511, -1.04308e-07, 0.0126683, 0.987753)
bones/50/rotation = Quaternion(-5.96046e-08, 0, 0, 1)
bones/51/position = Vector3(-0.0472583, 0.109082, 0.00227083)
bones/51/rotation = Quaternion(0.228493, 0.00339763, 0.0429811, 0.97259)
bones/52/rotation = Quaternion(0.151548, 1.11759e-06, 0.0123456, 0.988373)
bones/53/rotation = Quaternion(0.143773, -1.95205e-06, 0.0117121, 0.989541)
bones/55/rotation = Quaternion(0.136857, 0.0803993, 0.984418, -0.0756817)
bones/56/rotation = Quaternion(-0.0389339, 0.992895, -0.111775, 0.0122187)
bones/57/rotation = Quaternion(-0.0419962, 0.711372, -0.699803, 0.0496123)
bones/58/rotation = Quaternion(-9.59829e-08, 0.999075, 0.0429963, -1.48173e-09)
bones/59/position = Vector3(-0.00142061, 0.0999745, 0.00175225)
bones/60/rotation = Quaternion(-0.0917424, -0.00926039, 0.995345, -0.0280224)
bones/61/rotation = Quaternion(0.0341652, 0.99386, -0.064634, -0.0830512)
bones/62/rotation = Quaternion(0.0103464, 0.681108, -0.731586, -0.0276988)
bones/63/rotation = Quaternion(1.81116e-07, 0.998044, 0.0625165, -1.14375e-08)
bones/64/position = Vector3(0.00141798, 0.0999746, 0.00175011)

[node name="AnimationTree" type="AnimationTree" parent="Skin"]
root_node = NodePath("../CombatPack")
tree_root = SubResource("36")
anim_player = NodePath("../CombatPack/AnimationPlayer")
parameters/Crouching/blend_position = 0.0
parameters/Jump/active = false
parameters/Jump/internal_active = false
parameters/Jump/request = 0
parameters/OnGround/blend_position = 0.0
parameters/RootState/current_state = "on-ground"
parameters/RootState/transition_request = ""
parameters/RootState/current_index = 0
parameters/Surging/blend_position = 0.0
parameters/Swimming/blend_position = 0.0

[node name="VfxDash" type="GPUParticles3D" parent="Skin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.984, 1.12412)
material_override = SubResource("16")
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
explosiveness = 1.0
randomness = 0.34
visibility_aabb = AABB(-1.39, -2.508, -3.479, 2.781, 5.015, 6.958)
local_coords = true
process_material = SubResource("17")
draw_pass_1 = SubResource("18")

[node name="VfxSurge" type="GPUParticles3D" parent="Skin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01641, 0)
emitting = false
amount = 16
lifetime = 0.6
one_shot = true
randomness = 1.0
visibility_aabb = AABB(-2, -1.21914, -3, 4, 2.43828, 6)
process_material = SubResource("27")
draw_pass_1 = SubResource("29")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -4.37114e-09)
shape = SubResource("37")

[node name="CamRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, 0)

[node name="ControllableCamera" parent="CamRoot" instance=ExtResource("2")]

[node name="Controls" parent="." instance=ExtResource("3")]

[node name="Movement" type="Node" parent="."]
script = ExtResource("4")
initial_state = NodePath("OnGround")

[node name="Crouching" type="Node" parent="Movement"]
script = ExtResource("12")

[node name="Stopped" type="Node" parent="Movement/Crouching"]
script = ExtResource("5")

[node name="Moving" type="Node" parent="Movement/Crouching"]
script = ExtResource("6")
move_speed = 4.0
sprint_speed = 4.0
turn_speed = 8.0
acceleration = 30.0
cam_follow_speed = 4.0

[node name="OnGround" type="Node" parent="Movement"]
script = ExtResource("9")

[node name="Stopped" type="Node" parent="Movement/OnGround"]
script = ExtResource("5")

[node name="Running" type="Node" parent="Movement/OnGround"]
script = ExtResource("6")

[node name="Dashing" type="Node" parent="Movement/OnGround"]
script = ExtResource("8")

[node name="InAir" type="Node" parent="Movement" node_paths=PackedStringArray("raycast")]
script = ExtResource("10")
raycast = NodePath("../../RayCast3D")

[node name="Falling" type="Node" parent="Movement/InAir"]
script = ExtResource("11")

[node name="Jumping" type="Node" parent="Movement/InAir"]
script = ExtResource("7")

[node name="Dashing" type="Node" parent="Movement/InAir"]
script = ExtResource("8")
dash_power = 180.0

[node name="Swimming" type="Node" parent="Movement"]
script = ExtResource("14")

[node name="Diving" type="Node" parent="Movement/Swimming"]
script = ExtResource("17")

[node name="OnSurface" type="Node" parent="Movement/Swimming"]
script = ExtResource("15")

[node name="Underwater" type="Node" parent="Movement/Swimming"]
script = ExtResource("16")

[node name="Surging" type="Node" parent="Movement/Swimming"]
script = ExtResource("18")

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="SurgeTimer" type="Timer" parent="."]
one_shot = true

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.204679, 0)
collision_mask = 255
collide_with_areas = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("19_ofhxi")

[node name="HSlider" type="HSlider" parent="CanvasLayer"]
visible = false
offset_left = 3.0
offset_top = 190.0
offset_right = 81.0
offset_bottom = 206.0
min_value = 4.0
max_value = 50.0
value = 4.0

[node name="Label" type="Label" parent="CanvasLayer/HSlider"]
layout_mode = 0
offset_left = 4.0
offset_top = -32.0
offset_right = 44.0
offset_bottom = -9.0
text = "speed crounch"

[node name="HSlider2" type="HSlider" parent="CanvasLayer"]
visible = false
offset_left = 5.0
offset_top = 249.0
offset_right = 83.0
offset_bottom = 265.0
min_value = 10.0
max_value = 60.0
value = 10.0

[node name="Label2" type="Label" parent="CanvasLayer/HSlider2"]
layout_mode = 0
offset_left = -1.0
offset_top = -33.0
offset_right = 39.0
offset_bottom = -10.0
text = "speed running"

[node name="HSlider3" type="HSlider" parent="CanvasLayer"]
visible = false
offset_left = 2.0
offset_top = 302.0
offset_right = 90.0
offset_bottom = 318.0
min_value = 2.0
max_value = 10.0
value = 2.0

[node name="Label" type="Label" parent="CanvasLayer/HSlider3"]
layout_mode = 0
offset_left = 99.0
offset_top = -6.0
offset_right = 139.0
offset_bottom = 17.0
text = "2"

[node name="Label4" type="Label" parent="CanvasLayer/HSlider3"]
layout_mode = 0
offset_left = 2.0
offset_top = -31.0
offset_right = 42.0
offset_bottom = -8.0
text = "max jump x10"

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 3.0
offset_top = 91.0
offset_right = 82.0
offset_bottom = 115.0
text = "hack"

[node name="HSlider4" type="HSlider" parent="CanvasLayer"]
visible = false
offset_top = 350.0
offset_right = 76.0
offset_bottom = 366.0
max_value = 1.0
rounded = true

[node name="Label" type="Label" parent="CanvasLayer/HSlider4"]
layout_mode = 0
offset_left = 4.0
offset_top = -28.0
offset_right = 44.0
offset_bottom = -5.0
text = "animaciones: true"

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 613.0
offset_top = 1.0
offset_right = 653.0
offset_bottom = 24.0
text = "esc mouse capture"

[connection signal="area_entered" from="DeepWaterDetector" to="." method="_on_DeepWaterDetector_area_entered"]
[connection signal="area_exited" from="DeepWaterDetector" to="." method="_on_DeepWaterDetector_area_exited"]
[connection signal="area_entered" from="WaterSurfaceDetector" to="." method="_on_WaterSurfaceDetector_area_entered"]
[connection signal="area_exited" from="WaterSurfaceDetector" to="." method="_on_WaterSurfaceDetector_area_exited"]
[connection signal="drag_ended" from="CanvasLayer/HSlider" to="CanvasLayer" method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="CanvasLayer/HSlider" to="CanvasLayer" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/HSlider2" to="CanvasLayer" method="_on_h_slider_2_value_changed"]
[connection signal="value_changed" from="CanvasLayer/HSlider3" to="CanvasLayer" method="_on_h_slider_3_value_changed"]
[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/HSlider4" to="CanvasLayer" method="_on_h_slider_4_value_changed"]

[editable path="Skin/CombatPack"]
